--- a/package.json
+++ b/package.json
@@ -8,22 +8,26 @@
 	"license": "UNLICENSED",
 	"private": false,
 	"engines": {
-		"node": ">= 8.2.0"
+		"node": ">= 10"
 	},
 	"scripts": {
 		"lint": "eslint --fix src/. test/. --config .eslintrc.json",
-		"test": "NODE_ENV=test mocha --bail --exit --recursive -r @babel/register -r @babel/polyfill",
+		"test": "DEBUG=GOOGLE_PLAY_SCRAPING NODE_ENV=test mocha --bail --exit --recursive -r @babel/register -r @babel/polyfill",
 		"cov": "nyc mocha --bail --exit --recursive -r @babel/register -r @babel/polyfill",
-		"tdd": "yarn run test -w --reporter min",
+		"tdd": "yarn run test -w --watch-extensions js,json --reporter min",
 		"dev": "nodemon bin/nodemon --exec babel-node",
 		"pm2": "pm2 start process.yml --env production",
 		"bundle": "rm -rf dist/; babel src/ -d dist/",
 		"prepublish": "yarn bundle"
 	},
 	"dependencies": {
+		"axios": "^0.18.0",
+		"cheerio": "^1.0.0-rc.2",
 		"config": "^3.0.1",
+		"date-fns": "^1.30.1",
+		"debug": "^4.1.1",
 		"flatten": "^1.0.2",
-		"fs-extra": "^7.0.0",
+		"fs-extra": "^7.0.1",
 		"lodash.chunk": "^4.2.0",
 		"lodash.merge": "^4.6.1",
 		"lodash.omit": "^4.5.0",
@@ -33,6 +37,7 @@
 		"pino": "^5.11.1",
 		"prettysize": "^2.0.0",
 		"promise-retry": "^1.1.1",
+		"ramda": "^0.26.1",
 		"require-directory": "^2.1.1"
 	},
 	"devDependencies": {
@@ -42,10 +47,12 @@
 		"@babel/preset-env": "^7.3.1",
 		"@babel/register": "^7.0.0-beta.55",
 		"@types/config": "^0.0.34",
+		"@types/debug": "^4.1.0",
 		"@types/fs-extra": "^5.0.4",
 		"@types/mocha": "^5.2.5",
 		"@types/node": "^10.12.21",
 		"@types/pino": "^5.8.4",
+		"@types/ramda": "^0.25.48",
 		"babel-plugin-add-module-exports": "^1.0.0",
 		"babel-plugin-module-resolver": "^3.1.3",
 		"eslint": "^5.13.0",
