--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"axios": "^0.18.0",
 		"cheerio": "^1.0.0-rc.2",
 		"config": "^3.0.1",
+		"country-data": "^0.0.31",
 		"date-fns": "^1.30.1",
 		"debug": "^4.1.1",
 		"flatten": "^1.0.2",
@@ -38,7 +39,8 @@
 		"prettysize": "^2.0.0",
 		"promise-retry": "^1.1.1",
 		"ramda": "^0.26.1",
-		"require-directory": "^2.1.1"
+		"require-directory": "^2.1.1",
+		"throat": "^4.1.0"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.0.0-beta.55",
@@ -46,6 +48,7 @@
 		"@babel/node": "^7.0.0-beta.55",
 		"@babel/preset-env": "^7.3.1",
 		"@babel/register": "^7.0.0-beta.55",
+		"@types/cheerio": "^0.22.10",
 		"@types/config": "^0.0.34",
 		"@types/debug": "^4.1.0",
 		"@types/fs-extra": "^5.0.4",
