--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,7 +49,7 @@
 		],
 		"array-bracket-spacing": ["error", "never"],
 		"object-curly-spacing": ["error", "always"],
-		"max-len": ["error", { "code": 120 }]
+		"max-len": ["error", { "code": 120, "ignoreComments": true }]
 	},
 	"settings": {
 		"import/resolver": {
