fix(ci): fix git auth

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ release:
   extends: .setup
   stage: deploy
   script:
-    - sh ci/git-auth.sh
+    - source ci/git-auth.sh
     - git ls-remote
     - sh ci/git-config.sh
     - npm_config_unsafe_perm=true yarn semantic-release
